# astrocyte

./: LICENSE  README.md  astro-begining.ipynb  ОТЧЁТ.docx
Jupiter Notebook/: astro-begining.ipynb
initial_analysis_of_astrocytes_package/: __init__.py  count_calcium_activity.py  grafic_area_calcium_activity.py  load_cadrs.py  matrix_intensity.py  pyproject.toml  setup.py
