[project]
name = "initial_analysis_of_astrocytes_package"
version = "0.0.1"
authors = [
  { name="Artem Markov", email="patsae@mail.ru" },
]
description = "Astro test package"
readme = "README.md"
dependencies = [
  'opencv-python > 4',
]

requires-python = "3.11.9"
classifiers = [
    "Programming Language :: Python :: 3"
]
